Finished first version of materials for section 2

--- a/02_Neurophysiology/GHK.ipynb
+++ b/02_Neurophysiology/GHK.ipynb
@@ -77,17 +77,15 @@
     "idx, = np.where((V > -0.1) & (V < 0.05))\n",
     "Ix = lambda Vm,gx,Ex: gx * (Vm - Ex)\n",
     "popt,_ = curve_fit(lambda Vm, gx: Ix(Vm, gx, E[ion]), V[idx], I[ion][idx])\n",
-    "ylim = -0.36, 1.815\n",
     "fig,ax = plt.subplots(1, 1, figsize=(5, 3))\n",
     "ax.plot(V * 1e3, I[ion] * 1e-5, 'k', lw=2)\n",
-    "# ax.plot([-100,50], Ix([-0.1,0.05], popt[0], E[ion]) * 1e-5, 'r', lw=2)\n",
+    "ax.plot([-100,50], Ix([-0.1,0.05], popt[0], E[ion]) * 1e-5, 'r', lw=2)\n",
     "ax.plot(E[ion] * 1e3 + np.zeros(2), ylim, 'm--', lw=1)\n",
     "ax.plot(ax.get_xlim(), np.zeros(2), 'm--', lw=1)\n",
     "ax.grid(which='major', lw=0.5, ls=':')\n",
     "ax.set_xlabel(r'V$_m$ (mV)', fontsize=12)\n",
     "ax.set_ylabel(r'I$_{{{}}}$ (mA/cm$^2$)'.format(ion), fontsize=12)\n",
     "ax.set_xlim([-100, 50])\n",
-    "ax.set_ylim(ylim)\n",
     "xticks = list(range(-100, 51, 50))\n",
     "xticklabels = [f'{xtick:.0f}' for xtick in xticks]\n",
     "xticks.append(int(E[ion] * 1e3))\n",
@@ -115,7 +113,7 @@
     "Itot = 0\n",
     "gL = 0\n",
     "IL = 0\n",
-    "ions = 'K', 'Na'\n",
+    "ions = 'K', 'Na', 'Cl'\n",
     "fig,ax = plt.subplots(1, 1, figsize=(5,3))\n",
     "for ion in ions:\n",
     "    popt[ion],_ = curve_fit(lambda Vm, gx: Ix(Vm, gx, E[ion]), V, I[ion])\n",
