Minor modifications to some notebooks

--- a/01_Mathematical_background/Bifurcations_Morris_Lecar_model.ipynb
+++ b/01_Mathematical_background/Bifurcations_Morris_Lecar_model.ipynb
@@ -32,7 +32,9 @@
    "id": "d3c1b83c",
    "metadata": {},
    "source": [
-    "### Saddle-node bifurcation"
+    "### Saddle-node bifurcation\n",
+    "\n",
+    "The _normal form_ of the saddle-node bifurcation is $\\dot{x}=x^2+p$. The parameter $p$ determines the number of the equilibria of the system: in particular, as $p$ increases from a negative to a positive value, we see that the number of equilibria changes."
    ]
   },
   {
@@ -107,7 +109,7 @@
     "\\tau_n(V_m) = \\frac{\\tau_0}{\\cosh\\left(\\frac{V_m-V_3}{2V_4}\\right)}\n",
     "$\n",
     "\n",
-    "All the constant parameters used in the following are taken from [the paper](https://doi.org/10.1016/j.neucom.2005.03.006): <br/>\n",
+    "All the constant parameters used in the following are taken from [this paper](https://doi.org/10.1016/j.neucom.2005.03.006): <br/>\n",
     "Tsumoto, K., Kitajima, H., Yoshinaga, T., Aihara, K. and Kawakami, H., 2006. _Bifurcations in Morris–Lecar neuron model_. Neurocomputing, 69(4-6), pp.293-316.\n",
     "\n",
     "The purpose of this notebook is to show how a saddle-node bifurcation leads to stable oscillations (i.e., spiking) in the model."
