--- a/01_Mathematical_background/Euler_method.ipynb
+++ b/01_Mathematical_background/Euler_method.ipynb
@@ -40,7 +40,7 @@
     "which is valid when $\\Delta t$ is small enough (relative to the characteristic time(s) of the system we are considering).\n",
     "We can therefore write the iterative expression for the _approximate_ solution $x(t)$ as\n",
     "\n",
-    "$x(t+h) = x(t) + \\Delta t f(x(t))$.\n",
+    "$x(t+\\Delta t) = x(t) + \\Delta t f(x(t))$.\n",
     "\n",
     "As an iterative rule, this reads\n",
     "\n",
@@ -72,7 +72,7 @@
    "id": "b5d982a6",
    "metadata": {},
    "source": [
-    "One of the downsides of Euler's method is that it uses the derivative $f(x)$ only in $x_n$, i.e., at the left end of each time interval. We can therefore improve the method by first estimating the solution at step $n+1$ using the standard method (which we shall call $\\tilde{x}_{n+1}$, computing the derivative $f(\\tilde{x}_{n+1})$ and then calculating the next solution $x_{n+1}$ by using a weighted average of the values of the derivative at _both_ ends of the time interval.\n",
+    "One of the downsides of Euler's method is that it uses the derivative $f(x)$ only in $x_n$, i.e., at the left end of each time interval. We can therefore improve the method by first estimating the solution at step $n+1$ using the standard method (which we shall call $\\tilde{x}_{n+1}$, then computing the derivative $f(\\tilde{x}_{n+1})$ and finally calculating the next solution $x_{n+1}$ by using a weighted average of the values of the derivative at _both_ ends of the time interval.\n",
     "\n",
     "In formulas, this reads\n",
     "\n",
