--- a/01_Mathematical_background/Fitzhugh_Nagumo_model.ipynb
+++ b/01_Mathematical_background/Fitzhugh_Nagumo_model.ipynb
@@ -10,8 +10,8 @@
     "The Fitzhugh-Nagumo (FHN) model is a 2D simplification of the Hodgkin-Huxley model that retains some of the crucial features of more complicated neuron models. Its equations are given by:\n",
     "\n",
     "$\n",
-    "v' = v - \\frac{v^3}{3} - w + I \\\\\n",
-    "w' = \\epsilon(b_0 + b_1 v - w)\n",
+    "v' = f(v,w) = v - \\frac{v^3}{3} - w + I \\\\\n",
+    "w' = g(v,w) = \\epsilon(b_0 + b_1 v - w)\n",
     "$\n",
     "\n",
     "where $v$ is the membrane voltage and $w$ is a recovery variable that models the slow dynamics observed in neurons.\n",
@@ -42,10 +42,13 @@
     "\n",
     "The Jacobian matrix of the FHN model is given by\n",
     "\n",
-    "$\n",
-    "1-v^2 -1 \\\\\n",
-    "\\epsilon b_1  -\\epsilon\n",
-    "$\n",
+    "$\\frac{\\partial f}{\\partial v} = 1-v^2$\n",
+    "\n",
+    "$\\frac{\\partial f}{\\partial w} = -1$\n",
+    "\n",
+    "$\\frac{\\partial g}{\\partial v} = \\epsilon b_1$\n",
+    "\n",
+    "$\\frac{\\partial g}{\\partial w} = -\\epsilon$\n",
     "\n",
     "We will use it to study the stability of the equilibria of the system."
    ]
