--- a/03_Hodgkin-Huxley/HH.ipynb
+++ b/03_Hodgkin-Huxley/HH.ipynb
@@ -102,39 +102,9 @@
     "import numpy as np\n",
     "from scipy.integrate import solve_ivp\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ab06995f",
-   "metadata": {},
-   "source": [
-    "First of all, we define a couple of functions that will be used in the following:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e50ee675",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this avoids problems when the rate function is 0/0\n",
-    "def vtrap(x,y):\n",
-    "    if np.isscalar(x):\n",
-    "        return y*(1-x/y/2) if abs(x/y)<1e-6 else x/(np.exp(x/y) - 1)\n",
-    "    z = np.zeros_like(x, dtype=float)\n",
-    "    idx = abs(x/y) < 1e-6\n",
-    "    z[idx] = y*(1-x[idx]/y/2)\n",
-    "    np.logical_not(idx, out=idx)\n",
-    "    z[idx] = x[idx]/(np.exp(x[idx]/y) - 1)\n",
-    "    return z\n",
-    "\n",
-    "# returns x_ss and tau_x\n",
-    "def coeffs(v, alpha_fun, beta_fun):\n",
-    "    a,b = alpha_fun(v),beta_fun(v)\n",
-    "    return a/(a+b), 1/(a+b)"
+    "import seaborn as sns\n",
+    "# this file contains a couple of functions that will be used in the following\n",
+    "from hh_utils import vtrap, coeffs"
    ]
   },
   {
@@ -147,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d2e89416",
    "metadata": {},
    "outputs": [],
@@ -170,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "24749788",
    "metadata": {},
    "outputs": [],
@@ -183,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cbcb8e6a",
    "metadata": {},
    "outputs": [
@@ -226,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "433149c0",
    "metadata": {},
    "outputs": [],
@@ -261,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "8eda8428",
    "metadata": {},
    "outputs": [],
@@ -278,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "57d85041",
    "metadata": {},
    "outputs": [
@@ -316,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4f70ddd4",
    "metadata": {},
    "outputs": [],
@@ -327,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "763b09af",
    "metadata": {},
    "outputs": [],
@@ -347,14 +317,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "76cf716d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06e849bd02b8436cb540b2a622a93a32",
+       "model_id": "7f721ebd2ac74e49bf1de470522eed94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -376,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "739c954c",
    "metadata": {},
    "outputs": [
