Added the cable equation notebook

--- a/03_Hodgkin-Huxley/CS.ipynb
+++ b/03_Hodgkin-Huxley/CS.ipynb
@@ -5,7 +5,7 @@
    "id": "28be23c3",
    "metadata": {},
    "source": [
-    "## The Connor-Stevens model\n",
+    "# The Connor-Stevens model\n",
     "\n",
     "The CS model belongs to the family of conductance-based neuron models. It is characterized by the presence of an additional potassium current, termed A-current, that affects the firing properties of the model. In particular, the CS model is a so-called type I neuron model, which indicates that the model can fire at arbitrarily low rates, while type II neuron models, such as the HH model, have a minimum firing rate below which they cannot fire.\n",
     "\n",
