--- a/03_Hodgkin-Huxley/HH.ipynb
+++ b/03_Hodgkin-Huxley/HH.ipynb
@@ -5,7 +5,7 @@
    "id": "dc0070a5",
    "metadata": {},
    "source": [
-    "## The Hodgkin-Huxley model and its formalism"
+    "# The Hodgkin-Huxley model and its formalism"
    ]
   },
   {
