Improved description in Leaky_IF.ipynb

--- a/04_Integrate-and-fire/Leaky_IF.ipynb
+++ b/04_Integrate-and-fire/Leaky_IF.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Leaky integrate-and-fire neuron model\n",
+    "\n",
+    "The leaky integrate-and-fire (LIF) model is one of the simplest models of neuronal excitability. It is made up of the following equations:\n",
+    "\n",
+    "$\n",
+    "C \\frac{\\mathrm{d}V_m}{\\mathrm{d}t} = g_L(E_L - V_m) + I_{ext} \\\\\n",
+    "\\mathrm{if}\\quad V_m \\geq V_{th},\\quad V_m \\rightarrow V_{reset}\n",
+    "$\n",
+    "\n",
+    "The first one is the equation of a simple leaky integrator, whereas the second one accounts for the reset of the membrane voltage that occurs when the spiking threshold is crossed, i.e., a spike is emitted.\n",
+    "\n",
+    "In this notebook we perform the integration of the model using Euler method and compute its analytical and experimental f-I curve."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,6 +29,13 @@
     "import seaborn as sns\n",
     "from tqdm.notebook import tqdm\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The parameters of the model:"
    ]
   },
   {
@@ -27,7 +52,14 @@
     "Vth    = -54e-3   # [V]\n",
     "Vreset = -65e-3   # [V]\n",
     "I0     = 400e-12  # [A]\n",
-    "tarp   = 5e-3     # [s]"
+    "tarp   = 5e-3     # [s] refractory period"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we inject a DC step of current:"
    ]
   },
   {
@@ -60,6 +92,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the results:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -88,6 +127,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computation of the f-I curve\n",
+    "\n",
+    "Being the LIF model linear, the f-I curve can be computed analytically. It is given by the following equation:\n",
+    "\n",
+    "$f(I) = \\left[\\tau_{arp} - \\frac{C}{g_L} \\log \\left( \\frac{g_L(V_{th}-E_L)-I}{g_L(V_{reset}-E_L)-I}\\right) \\right]^{-1}$,\n",
+    "\n",
+    "where $\\tau_{arp}$ is the refractory period used above."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -95,7 +147,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8438f74bf9eb40d0bcd9e61cac32fb86",
+       "model_id": "e64c9de4029a4e218e11f6f384760e11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,6 +209,27 @@
     "ax.set_ylabel('Firing rate (spikes/s)')\n",
     "sns.despine()\n",
     "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercise\n",
+    "\n",
+    "Add an excitatory synaptic conductance to the IF model described above based on the equation\n",
+    "\n",
+    "$C \\frac{\\mathrm{d}V_m}{\\mathrm{d}t} = g_L(E_L - V_m) + g_{exc}(E_{exc}-V_m)$\n",
+    "\n",
+    "with $E_{exc} = 0\\,\\mathrm{mV}$. The excitatory conductance should satisfy the equation\n",
+    "\n",
+    "$\\tau_{exc}\\frac{\\mathrm{d}g_{exc}}{\\mathrm{d}t} = −g_{exc}$\n",
+    "\n",
+    "with $\\tau_{exc} = 10\\,\\mathrm{ms}$. In addition, every time there is a presynaptic action potential, add an amount $\\Delta g_{exc}$ to $g_{exc}$, with $\\Delta g_{exc} = 1\\,\\mathrm{nS}$.\n",
+    "\n",
+    "Plot $V_m(t)$ in one graph and the synaptic current, defined as $I_{exc} = g_{exc}(E_{exc}-V_m)$ in another, while triggering presynaptic action potentials at times 100, 200, 230, 300, 320, 400, and 410 ms. Explain what you see.\n",
+    "\n",
+    "Now, in similar fashion, add an inhibitory synapse with $\\Delta g_{inh} = \\Delta g_{exc}$ and $E_{inh} = −80\\,\\mathrm{mV}$."
    ]
   }
  ],
